src/objects/sdfs__FormulaShare_Settings__mdt.object
<CustomObject>
    <description>Org-wide configuration settings for FormulaShare</description>
    <fields>
        <fullName>sdfs__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only one group of settings can be acitve at once</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__All_Record_Errors_Report_Name__c</fullName>
        <label>All Record Errors Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__All_Record_Logs_Report_Name__c</fullName>
        <label>All Record Logs Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Allow_Recursive_Reassessment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows sharing to be assessed for the same record more than once in a transaction. This may be required for real time reassessment in complex scenarios with cascading updates, but could contribute to performance issues so should be disabled unless it&apos;s needed</inlineHelpText>
        <label>Allow Recursive Reassessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Batch_Errors_Report_Name__c</fullName>
        <label>Batch Errors Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Days_to_Retain_Batch_Logs__c</fullName>
        <label>Days to Retain Batch Logs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Days_to_Retain_Record_Logs__c</fullName>
        <label>Days to Retain Record Logs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Log_Processing_Events__c</fullName>
        <defaultValue>&apos;All Sharing Updates&apos;</defaultValue>
        <description>If enabled, log records will be created in the FormulaShare Record Log and Processed Record Share objects to track the details of rule operations</description>
        <label>Log Processing Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Logs_Removal_Batch_Size__c</fullName>
        <label>Logs Removal Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Max_Parallel_Targeted_Job_Submissions__c</fullName>
        <description>Number of batch jobs which are permitted in the processing state, in addition to those in the Apex Flex Queue, before further jobs won&apos;t be submitted</description>
        <label>Max Parallel Targeted Job Submissions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Rec_Errors_Since_Last_Batch_Report_Name__c</fullName>
        <label>Rec. Errors Since Last Batch Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Recalculation_Batch_Size__c</fullName>
        <inlineHelpText>Number of records processed in each scheduled recalculation. Setting to 200 will ensure processing is as fast as possible</inlineHelpText>
        <label>Recalculation Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Record_Logs_Since_Last_Batch_Report_Name__c</fullName>
        <label>Record Logs Since Last Batch Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Targeted_Jobs_Assessment_Interval__c</fullName>
        <description>Time in minutes between each run of the Targered Jobs batch job. Determines how often Targeted Jobs metadata are checked for new ones to be submitted</description>
        <label>Targeted Jobs Assessment Interval</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sdfs__Trigger_Helper_Class_Override__c</fullName>
        <description>Used to override the default implementing class called from the trigger context. This should be blank unless testing a new release or remaining on a legacy code version.</description>
        <label>Trigger Helper Class Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormulaShare Settings</label>
    <pluralLabel>FormulaShare Settings</pluralLabel>
</CustomObject>